--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,11 +28,10 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'android.arch.lifecycle:extensions:1.0.0'
 
-    kapt 'com.android.databinding:compiler:3.0.1'
+    kapt 'com.android.databinding:compiler:3.1.0-alpha06'
     kapt 'android.arch.lifecycle:compiler:1.0.0'
 
     testImplementation 'junit:junit:4.12'
-
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 }
