--- a/build.gradle
+++ b/build.gradle
@@ -1,29 +1,23 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
-	ext.kotlin_version = '1.2.10'
-
-	repositories {
+    ext.kotlin_version = '1.2.50'
+    repositories {
         google()
         jcenter()
     }
     dependencies {
-	    classpath 'com.android.tools.build:gradle:3.1.0-alpha09'
-	    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-
-	    // NOTE: Do not place your application dependencies here; they belong
+        classpath 'com.android.tools.build:gradle:3.1.3'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
-
 allprojects {
     repositories {
         jcenter()
-	    google()
+        google()
     }
 }
-
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
